# azure_rust_tinkering

./: Cargo.toml  README.md
src/: batch_uploader.rs  document_model.rs  lib.rs  main.rs  path_client.rs  path_index_client.rs  path_index_model.rs  search_indexer.rs  test_index_model.rs  utils.rs
