[package]
name = "azure_rust_tinkering"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azure_core = "0.18.0"
azure_storage = "0.18.0"
azure_storage_datalake = "0.18.1"
dotenv = "0.15.0"
futures = "0.3.30"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
