[package]
name = "azure_rust_tinkering"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azure_core = "0.18.0"
azure_storage = "0.18.0"
azure_storage_datalake = "0.18.1"
dotenv = "0.15.0"
futures = "0.3.30"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
azure_svc_search = {path = "../azure-sdk-for-rust/services/svc/search"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.31", features = ["serde"] }
urlencoding = "2.1.3"
